整理框架：添加策略因子库、批量回测脚本，更新数据下载和配置

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,5 @@ __pycache__/
 .venv/
 __pycache__/
 .DS_Store
-data/pickle_data/
-data/market_csv/
-data/output/
-data/oi_history/
+data/
+data_oi_fixed/
